Bug 143236 - unable to calculate video image size and fail when adding files
Summary: unable to calculate video image size and fail when adding files
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: Video DVD (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-19 21:13 UTC by Mamonetti
Modified: 2007-03-20 10:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mamonetti 2007-03-19 21:13:37 UTC
Version:           1.0 (using KDE KDE 3.5.3)
Installed from:    SuSE RPMs
Compiler:          gcc 4.0.4 
OS:                Linux

I've upgraded to 1.0 recently. I have opensuse 10.0, kde 3.5.3 and gcc 4.0.4

I've compiled from sources with debug enabled, and I'm having 2 problems with video-dvd projects:
1. if i create a new project and move to the VIDEO_TS folder when i click over files that should be added (to this folder) they go to the root folder.. so i have to select all them, then remove all from the root and when returning to VIDEO_TS i can drag & drop the files manually to the correct destination (i was working great on non-1.0 versions)
2. after adding the files when going to burn the disc the program can't calculate the size of the video image. the output is (there i tried to burn it twice):

===================================================

kdecore (KAction): WARNING: KActionCollection::KActionCollection( QObject *parent, const char *name, KInstance *instance )
k3b: (K3bCdrecordProgram) could not start /opt/schily/bin
k3b: (K3bMkisofsProgram) could not start /opt/schily/bin
k3b: (K3bExternalBinManager) Cdrecord 2.1 features: gracetime, overburn, cdtext, clone, tao, cuefile, xamix, plain-atapi, hacked-atapi, audio-stdin, burnfree
k3b: (K3bExternalBinManager) 2 1 -1  seems to be cdrecord version >= 1.11a02, using burnfree instead of burnproof
k3b: (K3bExternalBinManager) seems to be cdrecord version >= 1.11a31, support for Just Link via burnfree driveroption
(K3bDevice::HalConnection) initializing HAL >= 0.5
Mapping udi /org/freedesktop/Hal/devices/storage_model_PIONEER_DVD_RW_DVR_108 to device /dev/hdc
Mapping udi /org/freedesktop/Hal/devices/storage_model_TOSHIBA_DVD_ROM_SD_M1912 to device /dev/hdd
/dev/hdc resolved to /dev/hdc
/dev/hdc is block device (0)
/dev/hdc seems to be cdrom
(K3bDevice::Device) /dev/hdc: init()
(K3bDevice::Device) /dev/hdc feature: CD Mastering
(K3bDevice::Device) /dev/hdc feature: CD Track At Once
(K3bDevice::Device) /dev/hdc feature: DVD+R
(K3bDevice::Device) /dev/hdc feature: DVD+RW
(K3bDevice::Device) /dev/hdc feature: DVD+R Double Layer
(K3bDevice::Device) /dev/hdc feature: DVD-R/-RW Write
(K3bDevice::Device) /dev/hdc feature: Rigid Restricted Overwrite
(K3bDevice::Device) /dev/hdc: dataLen: 60
(K3bDevice::Device) /dev/hdc: checking for TAO
(K3bDevice::Device) /dev/hdc: checking for SAO
(K3bDevice::Device) /dev/hdc: checking for SAO_R96P
(K3bDevice::Device) /dev/hdc: checking for SAO_R96R
(K3bDevice::Device) /dev/hdc: checking for RAW_R16
(K3bDevice::Device) /dev/hdc: checking for RAW_R96P
(K3bDevice::Device) /dev/hdc: checking for RAW_R96R
(K3bDevice::Device) /dev/hdc:  Number of supported write speeds via GET PERFORMANCE: 5
(K3bDevice::Device) /dev/hdc : 22160 KB/s
(K3bDevice::Device) /dev/hdc : 16620 KB/s
(K3bDevice::Device) /dev/hdc : 11080 KB/s
(K3bDevice::Device) /dev/hdc : 8310 KB/s
(K3bDevice::Device) /dev/hdc : 5540 KB/s
(K3bDevice::DeviceManager) setting current write speed of device /dev/hdc to 22160
/dev/hdd resolved to /dev/hdd
/dev/hdd is block device (64)
/dev/hdd seems to be cdrom
(K3bDevice::Device) /dev/hdd: init()
(K3bDevice::Device) /dev/hdd feature: DVD+R
(K3bDevice::Device) /dev/hdd feature: DVD+RW
(K3bDevice::ScsiCommand) failed:
                           command:    MODE SENSE (5a)
                           errorcode:  70
                           sense key:  ILLEGAL REQUEST (5)
                           asc:        24
                           ascq:       0
(K3bDevice::Device) /dev/hdd: MODE SENSE length det failed.
(K3bDevice::ScsiCommand) failed:
                           command:    MODE SENSE (5a)
                           errorcode:  70
                           sense key:  ILLEGAL REQUEST (5)
                           asc:        24
                           ascq:       0
(K3bDevice::Device) /dev/hdd: MODE SENSE with real length 65535 failed.
(K3bDevice::Device) /dev/hdd: modeSense 0x05 failed!
(K3bDevice::Device) /dev/hdd: Cannot check write modes.
(K3bDevice::ScsiCommand) failed:
                           command:    MODE SENSE (5a)
                           errorcode:  70
                           sense key:  ILLEGAL REQUEST (5)
                           asc:        24
                           ascq:       0
(K3bDevice::Device) /dev/hdd: MODE SENSE length det failed.
(K3bDevice::ScsiCommand) failed:
                           command:    MODE SENSE (5a)
                           errorcode:  70
                           sense key:  ILLEGAL REQUEST (5)
                           asc:        24
                           ascq:       0
(K3bDevice::Device) /dev/hdd: MODE SENSE with real length 65535 failed.
k3b: [void K3bMediaCache::clearDeviceList()]
/dev/hdc resolved to /dev/hdc
(K3bDevice::DeviceManager) dev /dev/hdc already found
/dev/hdd resolved to /dev/hdd
(K3bDevice::DeviceManager) dev /dev/hdd already found
(K3bDevice::DeviceManager) found config entry for devicetype: PIONEER DVD-RW  DVR-108
(K3bDevice::DeviceManager) found config entry for devicetype: TOSHIBA DVD-ROM SD-M1912
First sec data area: 43:41:33 (LBA 196608) (402653184
Last sec data area: 00:00:00 (LBA 0) (0 Bytes)
Last sec layer 1: 00:00:00 (LBA 0) (0 Bytes)
Layer 1 length: 00:00:01 (LBA 1) (2048 Bytes)
Layer 2 length: 00:00:00 (LBA 0) (0 Bytes)
k3b: (K3bMedium) found medium:
k3b: =====================================================
DiskInfo:
Mediatype:       DVD-R Secuencial
Current Profile: DVD-R Secuencial
Disk state:      empty
Empty:           1
Rewritable:      0
Appendable:      0
Sessions:        0
Tracks:          0
Layers:          1
Capacity:        510:46:46 (LBA 2298496) (4707319808 Bytes)
Remaining size:  510:46:46 (LBA 2298496) (4707319808 Bytes)
Used Size:       00:00:00 (LBA 0) (0 Bytes)
k3b: =====================================================
(K3bDevice::Device) /dev/hdc:  Number of supported write speeds via GET PERFORMANCE: 5
(K3bDevice::Device) /dev/hdc : 22160 KB/s
(K3bDevice::Device) /dev/hdc : 16620 KB/s
(K3bDevice::Device) /dev/hdc : 11080 KB/s
(K3bDevice::Device) /dev/hdc : 8310 KB/s
(K3bDevice::Device) /dev/hdc : 5540 KB/s
k3b: (K3bCdrecordProgram) could not start /opt/schily/bin
k3b: (K3bMkisofsProgram) could not start /opt/schily/bin
k3b: (K3bExternalBinManager) Cdrecord 2.1 features: gracetime, overburn, cdtext, clone, tao, cuefile, xamix, plain-atapi, hacked-atapi, audio-stdin, burnfree
k3b: (K3bExternalBinManager) 2 1 -1  seems to be cdrecord version >= 1.11a02, using burnfree instead of burnproof
k3b: (K3bExternalBinManager) seems to be cdrecord version >= 1.11a31, support for Just Link via burnfree driveroption
Devices:
------------------------------
Blockdevice:    /dev/hdc
Generic device:
Vendor:         PIONEER
Description:    DVD-RW  DVR-108
Version:        1.20
Write speed:    22160
Profiles:       DVD-ROM, DVD-R Secuencial, DVD-RW sobreescritura restringida, DVD-RW Secuencial, DVD+RW, DVD+R, DVD+R Dual Layer, CD-ROM, CD-R, CD-RW
Read Cap:       DVD-ROM, DVD-R, DVD-R Secuencial, DVD-RW, DVD-RW sobreescritura restringida, DVD-RW Secuencial, DVD+RW, DVD+R, DVD+R Dual Layer, CD-ROM, CD-R, CD-RW
Write Cap:      DVD-R, DVD-R Secuencial, DVD-RW, DVD-RW sobreescritura restringida, DVD-RW Secuencial, DVD+RW, DVD+R, DVD+R Dual Layer, CD-R, CD-RW
Writing modes:  SAO, TAO, En bruto, SAO/R96P, SAO/R96R, RAW/R16, RAW/R96P, RAW/R96R, Sobreescritura restringida
Reader aliases: /dev/hdc
------------------------------
Blockdevice:    /dev/hdd
Generic device:
Vendor:         TOSHIBA
Description:    DVD-ROM SD-M1912
Version:        TM01
Write speed:    0
Profiles:       DVD-ROM, CD-ROM
Read Cap:       DVD-ROM, DVD+RW, DVD+R, CD-ROM
Write Cap:      Error
Writing modes:  Ninguno
Reader aliases: /dev/hdd
------------------------------
kdecore (KAction): WARNING: KActionCollection::operator+=(): function is severely deprecated.
k3b: (K3bFileTreeView::addCdDeviceBranches)
k3b: (K3bFileTreeView::addCdDeviceBranches) done
k3b: (K3bFileTreeView::addCdDeviceBranches)
k3b: (K3bFileTreeView::addCdDeviceBranches) done
mamonetti:/mnt/suse/varios # (K3bDevice::DeviceManager) request for empty device!
k3b: (K3bProjectManager) adding doc /VídeoDVD0
k3b: (K3bDataUrlAddingDialog) using locale codec: UTF-8
k3b: (K3bThreadJob) waiting for the thread to finish.
k3b: (K3bThreadJob) thread finished.
(K3bDevice::DeviceManager) request for empty device!
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
First sec data area: 43:41:33 (LBA 196608) (402653184
Last sec data area: 00:00:00 (LBA 0) (0 Bytes)
Last sec layer 1: 00:00:00 (LBA 0) (0 Bytes)
Layer 1 length: 00:00:01 (LBA 1) (2048 Bytes)
Layer 2 length: 00:00:00 (LBA 0) (0 Bytes)
k3b: (K3bMedium) found medium:
k3b: =====================================================
DiskInfo:
Mediatype:       DVD-R Secuencial
Current Profile: DVD-R Secuencial
Disk state:      empty
Empty:           1
Rewritable:      0
Appendable:      0
Sessions:        0
Tracks:          0
Layers:          1
Capacity:        510:46:46 (LBA 2298496) (4707319808 Bytes)
Remaining size:  510:46:46 (LBA 2298496) (4707319808 Bytes)
Used Size:       00:00:00 (LBA 0) (0 Bytes)
k3b: =====================================================
(K3bDevice::Device) /dev/hdc:  Number of supported write speeds via GET PERFORMANCE: 5
(K3bDevice::Device) /dev/hdc : 22160 KB/s
(K3bDevice::Device) /dev/hdc : 16620 KB/s
(K3bDevice::Device) /dev/hdc : 11080 KB/s
(K3bDevice::Device) /dev/hdc : 8310 KB/s
(K3bDevice::Device) /dev/hdc : 5540 KB/s
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
k3b: kernel version: 2.6.13-15-default
k3b: (K3bThreadJob) waiting for the thread to finish.
k3b: (K3bThreadJob) thread finished.
k3b: (K3bVideoDvdImager) creating temp dir: /tmp/kde-mamonetti/k3bVideoDvd0
k3b: (K3bIsoImager) creating dummy dir: /home/mamonetti/.kde/share/apps/k3b/temp/10e4696e75000117433454500000055600203_0/dummydir_0
k3b: ***** mkisofs calculate size parameters:
k3b: /usr/bin/mkisofs -gui -graft-points -print-size -quiet -volid K3b data project -volset  -appid K3B THE CD KREATOR (C) 1998-2006 SEBASTIAN TRUEG AND THE K3B TEAM -publisher  -preparer  -sysid LINUX -abstract  -copyright  -biblio  -volset-size 1 -volset-seqno 1 -sort /tmp/kde-mamonetti/k3b61LAMa.tmp -no-cache-inodes -udf -iso-level 1 -path-list /tmp/kde-mamonetti/k3btqx04a.tmp -dvd-video -f /tmp/kde-mamonetti/k3bVideoDvd0
k3b: (K3bIsoImager) Parsing mkisofs -print-size failed:
k3b: (K3bJobProgressDialog) received finished signal!
k3b: kernel version: 2.6.13-15-default
k3b: (K3bProjectBurnDialog) job done. cleaning up.
(K3bDevice::DeviceManager) request for empty device!
k3b: (K3bProjectManager) adding doc /VídeoDVD1
k3b: (K3bDataUrlAddingDialog) using locale codec: UTF-8
k3b: (K3bThreadJob) waiting for the thread to finish.
k3b: (K3bThreadJob) thread finished.
(K3bDevice::DeviceManager) request for empty device!
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
(K3bDevice::Device) /dev/hdc: GET CONFIGURATION length det failed.
k3b: kernel version: 2.6.13-15-default
k3b: (K3bThreadJob) waiting for the thread to finish.
k3b: (K3bThreadJob) thread finished.
k3b: (K3bVideoDvdImager) creating temp dir: /tmp/kde-mamonetti/k3bVideoDvd0
k3b: (K3bIsoImager) creating dummy dir: /home/mamonetti/.kde/share/apps/k3b/temp/10e4696e75000117433454500000055600203_1/dummydir_0
k3b: ***** mkisofs calculate size parameters:
k3b: /usr/bin/mkisofs -gui -graft-points -print-size -quiet -volid Infiltrados -volset  -appid K3B THE CD KREATOR (C) 1998-2006 SEBASTIAN TRUEG AND THE K3B TEAM -publisher  -preparer  -sysid LINUX -abstract  -copyright  -biblio  -volset-size 1 -volset-seqno 1 -sort /tmp/kde-mamonetti/k3bEYbmib.tmp -no-cache-inodes -udf -iso-level 1 -path-list /tmp/kde-mamonetti/k3bdqj7Pb.tmp -dvd-video -f /tmp/kde-mamonetti/k3bVideoDvd0
k3b: (K3bIsoImager) Parsing mkisofs -print-size failed:
k3b: (K3bJobProgressDialog) received finished signal!
k3b: kernel version: 2.6.13-15-default

===================================================

And the program's "debug output" is:

===================================================

System
-----------------------
K3b Version: 1.0

KDE Version: 3.5.3 Level "a" 
QT Version:  3.3.6
Kernel:      2.6.13-15-default
Devices
-----------------------
PIONEER DVD-RW  DVR-108 1.20 (/dev/hdc, ) [CD-R, CD-RW, CD-ROM, DVD-ROM, DVD-R, DVD-RW, DVD+R, DVD+RW, DVD+R DL] [DVD-ROM, DVD-R Secuencial, DVD-RW sobreescritura restringida, DVD-RW Secuencial, DVD+RW, DVD+R, DVD+R Dual Layer, CD-ROM, CD-R, CD-RW] [SAO, TAO, En bruto, SAO/R96P, SAO/R96R, RAW/R16, RAW/R96P, RAW/R96R, Sobreescritura restringida]

TOSHIBA DVD-ROM SD-M1912 TM01 (/dev/hdd, ) [CD-ROM, DVD-ROM] [DVD-ROM, CD-ROM] [Ninguno]
K3bIsoImager
-----------------------
mkisofs print size result: 0 (0 bytes)

Used versions
-----------------------
mkisofs: 2.1

mkisofs
-----------------------
/usr/bin/mkisofs: Warning: -follow-links does not always work correctly; be careful.
/usr/bin/mkisofs: Warning: -follow-links does not always work correctly; be careful.
/usr/bin/mkisofs: Implementation botch. Video pad for file VTS_03_0.IFO is -1295400903
/usr/bin/mkisofs: Implementation botch. Video pad for file VTS_03_0.IFO is -1295400903
/usr/bin/mkisofs: Either the *.IFO file is bad or you found a mkisofs bug.
/usr/bin/mkisofs: Either the *.IFO file is bad or you found a mkisofs bug.

mkisofs calculate size command:
-----------------------
/usr/bin/mkisofs -gui -graft-points -print-size -quiet -volid Infiltrados -volset  -appid K3B THE CD KREATOR (C) 1998-2006 SEBASTIAN TRUEG AND THE K3B TEAM -publisher  -preparer  -sysid LINUX -abstract  -copyright  -biblio  -volset-size 1 -volset-seqno 1 -sort /tmp/kde-mamonetti/k3bEYbmib.tmp -no-cache-inodes -udf -iso-level 1 -path-list /tmp/kde-mamonetti/k3bdqj7Pb.tmp -dvd-video -f /tmp/kde-mamonetti/k3bVideoDvd0 

===================================================

Regards
Comment 1 Sebastian Trueg 2007-03-19 21:28:39 UTC
> with video-dvd projects: 1. if i create a new project and move to the
> VIDEO_TS folder when i click over files that should be added (to this
> folder) they go to the root folder.. so i have to select all them, then


this only happens if the root folder is selected which is perfect behavior and 
was the same in 0.12.

> remove all from the root and when returning to VIDEO_TS i can drag & drop
> the files manually to the correct destination (i was working great on
> non-1.0 versions) 2. after adding the files when going to burn the disc the
> program can't calculate the size of the video image. the output is (there i
> tried to burn it twice):


> correctly; be careful. /usr/bin/mkisofs: Implementation botch. Video pad
> for file VTS_03_0.IFO is -1295400903 /usr/bin/mkisofs: Implementation
> botch. Video pad for file VTS_03_0.IFO is -1295400903 /usr/bin/mkisofs:
> Either the *.IFO file is bad or you found a mkisofs bug. /usr/bin/mkisofs:
> Either the *.IFO file is bad or you found a mkisofs bug.


And the same files work on k3b 0.12.x?
Comment 2 Mamonetti 2007-03-19 22:55:55 UTC
> this only happens if the root folder is selected which is perfect behavior and
> was the same in 0.12.

No, you're wrong. After creating a dvd-video project i select the VIDEO_TS folder at the bottom part (that is the new DVD), which of course is empty. Then at the upper zone (local files) i click on those that i want to add to this selected folder at the new DVD (VIDEO_TS) and are copied to the root folder of the DVD, not to the selected one. I don't think this is the correct behaviour (i can't remember if it was working this way for dvd-video projects, but for sure i didn't work this way for common dvd-data projects).

> And the same files work on k3b 0.12.x?

let me try to install it at another folder for testing it


regards
Comment 3 Mamonetti 2007-03-19 23:36:02 UTC
well, you were right.. same problem at 0.12.17 and files were copied to the root even if you have selected the VIDEO_TS

anyway i think this last behaviour is wrong.. if i have a certain folder selected at the destination project by clicking files they should be copied to this folder, and not to other one

anyway i'll close the BUG

sorry

regards
Comment 4 Sebastian Trueg 2007-03-20 08:52:58 UTC
> anyway i think this last behaviour is wrong.. if i have a certain folder
> selected at the destination project by clicking files they should be copied
> to this folder, and not to other one
>
> anyway i'll close the BUG
>
> sorry


no, no, if it is really like that don't close the bug. Just because it was 
like that in 0.12 does not make it right.
Comment 5 Sebastian Trueg 2007-03-20 08:53:58 UTC
I can confirm it now. Sorry.
Comment 6 Sebastian Trueg 2007-03-20 10:07:10 UTC
SVN commit 644512 by trueg:

Implemented K3bVideoDVDView::addUrls method. Now files added via the file browser are added to the currently open folder in the project.

BUG: 143236


 M  +8 -2      k3bvideodvdview.cpp  
 M  +2 -0      k3bvideodvdview.h  


--- trunk/extragear/multimedia/k3b/src/projects/k3bvideodvdview.cpp #644511:644512
@@ -1,4 +1,4 @@
-/* 
+/*
  *
  * $Id$
  * Copyright (C) 2005 Sebastian Trueg <trueg@k3b.org>
@@ -18,6 +18,7 @@
 #include "k3bvideodvdburndialog.h"
 #include "k3bdatadirtreeview.h"
 #include "k3bdatafileview.h"
+#include "k3bdataurladdingdialog.h"
 #include <k3bfillstatusdisplay.h>
 #include <k3bdatafileview.h>
 #include <k3btoolbox.h>
@@ -74,5 +75,10 @@
 			    "video_dvd_restrictions" );
 }
 
-//#include "k3bvideodvdview.moc"
+
+void K3bVideoDvdView::addUrls( const KURL::List& urls )
+{
+  K3bDataUrlAddingDialog::addUrls( urls, m_dataFileView->currentDir() );
+}
+
 #include "k3bvideodvdview.moc"
--- trunk/extragear/multimedia/k3b/src/projects/k3bvideodvdview.h #644511:644512
@@ -32,6 +32,8 @@
   K3bVideoDvdView( K3bVideoDvdDoc* doc, QWidget *parent = 0, const char *name = 0 );
   ~K3bVideoDvdView();
 
+   void addUrls( const KURL::List& );
+
  protected:
   virtual K3bProjectBurnDialog* newBurnDialog( QWidget* parent = 0, const char* name = 0 );