Implemented K3bVideoDVDView::addUrls method. Now files added via the file browser are added to the currently open folder in the project.

BUG: 143236

svn path=/trunk/extragear/multimedia/k3b/; revision=644512